############################################################################

INCLUDES = -I$(top_builddir)/src -I$(top_srcdir)/src

noinst_PROGRAMS = graphed planeviewer

graphed_SOURCES = graphed.cpp computils.h computils.cpp
graphed_LDADD = ../../src/Inventor/Gtk/libSoGtk.la

planeviewer_SOURCES = planeviewer.cpp computils.h computils.cpp
planeviewer_LDADD = ../../src/Inventor/Gtk/libSoGtk.la

